# ollama-forge

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
docs/: agents-guide.md  architecture.md  context-compression.md  hardware-guide.md  installation.md  mcp-guide.md  quickstart.md  troubleshooting.md
forge/: __init__.py  cli.py  config.py
forge/agents/: __init__.py  autofix.py  base.py  cascade.py  coder.py  memory.py  orchestrator.py  permissions.py  planner.py  prompts.py  qa.py  reflect.py  researcher.py  rules.py  sessions.py  tasks.py  tracker.py
forge/api/: __init__.py  openai_compat.py
forge/community/: __init__.py  ideas.py  self_improve.py
scripts/: benchmark.py  setup_rocm.sh
tests/: test_agents.py  test_agents_extended.py  test_api_server.py  test_autofix.py  test_benchmark.py  test_cascade.py  test_cli_commands.py  test_codebase.py  test_config.py  test_context_compression.py  test_hardware_detect.py  test_ideas.py  test_improvements_batch10.py  test_improvements_batch11.py  test_improvements_batch12.py  test_improvements_batch13.py  test_improvements_batch14.py  test_improvements_batch15.py  test_improvements_batch16.py  test_improvements_batch17.py  test_improvements_batch18.py  test_improvements_batch19.py  test_improvements_batch2.py  test_improvements_batch20.py  test_improvements_batch21.py  test_improvements_batch22.py  test_improvements_batch23.py  test_improvements_batch24.py  test_improvements_batch25.py  test_improvements_batch26.py  test_improvements_batch3.py  test_improvements_batch4.py  test_improvements_batch5.py  test_improvements_batch6.py  test_improvements_batch7.py  test_improvements_batch8.py  test_improvements_batch9.py  test_llm_client.py  test_mcp_manager.py  test_memory.py  (+17 more)
(+39 files in other folders)
